--- a/src/styles.css
+++ b/src/styles.css
@@ -14,14 +14,14 @@ body {
 }
 
 .page-header h1 {
-  padding: 16px 0px;
-  margin: 0px;
+  padding: 16px 0;
+  margin: 0;
 }
 
 .ml-1 {
-  margin-left: 1em;
+  margin-left: 1em !important;
 }
 
 .mt-1 {
-  margin-top: 1em;
+  margin-top: 1em !important;
 }
