--- a/src/app/students/view-student/view-student.component.html
+++ b/src/app/students/view-student/view-student.component.html
@@ -86,7 +86,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <div class="row between-xs" *ngIf="isNewStudent === false">
+            <div class="row between-xs" *ngIf="!isNewStudent">
               <button mat-raised-button color="primary" (click)="onUpdate()">Save</button>
               <button mat-raised-button color="warn" (click)="onDelete()">Delete</button>
             </div>
