--- a/src/app/students/view-student/view-student.component.html
+++ b/src/app/students/view-student/view-student.component.html
@@ -50,15 +50,16 @@
             <mat-form-field appearance="outline">
               <mat-label>Email</mat-label>
               <input type="text" matInput [(ngModel)]="student.email" name="email" required>
+              <mat-error>Email is required</mat-error>
             </mat-form-field>
-            <mat-error>Email is required</mat-error>
+
           </div>
           <div class="col-xs-6">
             <mat-form-field appearance="outline">
               <mat-label>Mobile</mat-label>
               <input type="number" matInput [(ngModel)]="student.mobile" name="mobile" required>
+              <mat-error>Mobile is required</mat-error>
             </mat-form-field>
-            <mat-error>Mobile is required</mat-error>
           </div>
         </div>
         <div class="row">
@@ -78,7 +79,8 @@
           <div class="col-xs-12">
             <mat-form-field appearance="outline">
               <mat-label>Physical Address</mat-label>
-              <textarea matInput [(ngModel)]="student.address.physicalAddress" name="physicalAddress" required></textarea>
+              <textarea matInput [(ngModel)]="student.address.physicalAddress" name="physicalAddress"
+                        required></textarea>
               <mat-error>Physical Address is required</mat-error>
             </mat-form-field>
           </div>
